--- a/00-studyJS/index.html
+++ b/00-studyJS/index.html
@@ -6,7 +6,9 @@
 <!--    Bu asagidaki counter css'ini almasi icin-->
     <link rel="stylesheet" href="counter.css">
 <!--    Asagidaki java script kodunu calistmak icin-->
-    <script src="counter.js"></script>
+<!--    <script src="counter.js"></script>-->
+<!--    <script src="counterApp.js"></script>-->
+    <script src="counterAppClass.js"></script>
 </head>
 <body>
 <h4> Counter: <span class="counter">0</span></h4>
